[package]
name = "owo"
version = "0.1.15"
edition = "2018"
authors = ["Sergio Bonatto <bonatto@tutanota.com>"]
# resolver = "2"

[dependencies]
serenity = "0.10.3"
tokio = { version = "1.16", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
